--- a/linked_lists/circularly_linked_lists.ipynb
+++ b/linked_lists/circularly_linked_lists.ipynb
@@ -10,21 +10,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment if you want to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple node with pointer.\n",
     "class Node:\n",
+    "    \"\"\"\n",
+    "    Simple node with pointer.\n",
+    "    \"\"\"\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.next = None\n",
     "\n",
+    "        \n",
     "class CircularlySinglyLinkedList:  # Should run in O(1)\n",
     "    def __init__(self):\n",
     "        self.tail = None\n",
     "        self.head = None\n",
     "        self.size = 0  # We initialize a counter at 0.\n",
+    "        \n",
     "        \n",
     "    def append(self, value):\n",
     "        \"\"\"\n",
@@ -87,17 +104,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple node with pointer.\n",
     "class Node:\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.next = None\n",
     "\n",
+    "        \n",
     "class CircularlySinglyLinkedList:  # Should run in O(1)\n",
     "    def __init__(self):\n",
     "        self.tail = None\n",
     "        self.head = None\n",
     "        self.size = 0  # We initialize a counter at 0.\n",
+    "        \n",
     "        \n",
     "    def append(self, value):\n",
     "        \"\"\"\n",
@@ -114,6 +132,7 @@
     "        self.size += 1\n",
     "        self.tail.next = self.head # We set the tail's next pointing to the head.\n",
     "\n",
+    "        \n",
     "    def delete(self, value):\n",
     "            \"\"\"\n",
     "            To delete a node between other nodes we must make the previous node point directly to the\n",
@@ -133,7 +152,8 @@
     "                    return\n",
     "                previous = current\n",
     "                current = current.next\n",
-    "                \n",
+    "            \n",
+    "            \n",
     "    def iterate(self):\n",
     "        current = self.head\n",
     "        while current:\n",
