--- a/linked_lists/doubly_linked_lists.ipynb
+++ b/linked_lists/doubly_linked_lists.ipynb
@@ -12,6 +12,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment if you want to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,9 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Doubly linked list node\n",
-    "\n",
     "class Node:\n",
+    "    \"\"\"\n",
+    "    Doubly linked list node\n",
+    "    \"\"\"\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.next = None\n",
@@ -52,6 +66,7 @@
     "        self.tail = None\n",
     "        self.size = 0\n",
     "        \n",
+    "        \n",
     "    def append(self, value):\n",
     "        \"\"\"\n",
     "        When the list is populated > 0 previous is now the tail\n",
@@ -68,6 +83,7 @@
     "            self.head = node\n",
     "            self.tail = self.head  \n",
     "        self.size += 1  # Add one to the counter\n",
+    "          \n",
     "            \n",
     "    def iterate(self):  # Same iteration algorithm as singly linked lists\n",
     "        current = self.head\n",
@@ -107,6 +123,7 @@
     "        self.tail = None\n",
     "        self.size = 0\n",
     "        \n",
+    "        \n",
     "    def append(self, value):\n",
     "        node = Node(value) \n",
     "        if self.head:  \n",
@@ -117,12 +134,14 @@
     "            self.head = node\n",
     "            self.tail = self.head      \n",
     "        self.size += 1\n",
+    "          \n",
     "            \n",
     "    def iterate(self):  # Same algorithm as singly linked list\n",
     "        current = self.head\n",
     "        while current:\n",
     "            yield current.value\n",
     "            current = current.next\n",
+    "    \n",
     "    \n",
     "    def delete(self, value):\n",
     "        \"\"\"\n",
@@ -275,6 +294,7 @@
     "        self.tail = None\n",
     "        self.size = 0\n",
     "        \n",
+    "        \n",
     "    def append(self, value):\n",
     "        node = Node(value) \n",
     "        if self.head:\n",
@@ -291,6 +311,7 @@
     "        while current:\n",
     "            yield current.value\n",
     "            current = current.next\n",
+    "    \n",
     "    \n",
     "    def delete(self, value):\n",
     "        current = self.head\n",
@@ -314,6 +335,7 @@
     "                    current = current.next\n",
     "        if node_deleted:\n",
     "            self.size -= 1\n",
+    "            \n",
     "            \n",
     "    def search(self, value):  # Same algorithm as singly linked lists\n",
     "        \"\"\"\n",
@@ -345,6 +367,7 @@
     "        self.tail = None\n",
     "        self.size = 0\n",
     "        \n",
+    "        \n",
     "    def append(self, value):\n",
     "        \"\"\"\n",
     "        Unlike singly linked lists self.head points to the beginner node opposed to self.tail\n",
@@ -358,6 +381,7 @@
     "            self.head = node\n",
     "            self.tail = self.head      \n",
     "        self.size += 1\n",
+    "    \n",
     "    \n",
     "    def delete(self, value):\n",
     "        \"\"\"\n",
@@ -385,7 +409,8 @@
     "                    current = current.next\n",
     "        if node_deleted:\n",
     "            self.size -= 1\n",
-    "                    \n",
+    "          \n",
+    "        \n",
     "    def iterate(self):  # Same logic as singly linked lists\n",
     "        \"\"\"\n",
     "        We can now completely ignore anything called a node outside of this list class.\n",
@@ -398,6 +423,7 @@
     "            yield current.value\n",
     "            current = current.next\n",
     "            \n",
+    "            \n",
     "    def search(self, value, position=-1):  # Same logic as signly linked lists\n",
     "        \"\"\"\n",
     "        Search within all the nodes if the value you\n",
@@ -408,6 +434,7 @@
     "            if value == node:\n",
     "                return position\n",
     "        return False\n",
+    "    \n",
     "    \n",
     "    def clear(self):  # Same logic as singly linked lists\n",
     "        \"\"\"\n",
