--- a/linked_lists/singly_linked_lists.ipynb
+++ b/linked_lists/singly_linked_lists.ipynb
@@ -11,12 +11,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment if you want to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple node with pointer.\n",
     "class Node:\n",
+    "    \"\"\"\n",
+    "    Simple node with pointer.\n",
+    "    \"\"\"\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.next = None"
@@ -83,11 +98,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nodes and lists are separate so we want to create a list class to hold the nodes.\n",
-    "class SinglyLinkedList:\n",
+    "class SinglyLinkedList: # Nodes and lists are separate so we want to create a list class to hold the nodes.\n",
     "    def __init__(self):\n",
     "        self.tail = None\n",
     "        self.head = None\n",
+    "        \n",
     "        \n",
     "    def append(self, value):\n",
     "        \"\"\"\n",
@@ -169,6 +184,7 @@
     "        self.head = None\n",
     "        self.size = 0  # We initialize a counter at 0.\n",
     "        \n",
+    "        \n",
     "    def append(self, value):\n",
     "        \"\"\"\n",
     "        The point at which we append new nodes is through self.head.\n",
@@ -237,6 +253,7 @@
     "        self.head = None\n",
     "        self.size = 0\n",
     "        \n",
+    "        \n",
     "    def append(self, value):\n",
     "        node = Node(value)\n",
     "        if self.tail:\n",
@@ -246,6 +263,7 @@
     "            self.tail = node\n",
     "            self.head = node \n",
     "        self.size += 1 \n",
+    "            \n",
     "            \n",
     "    def iterate(self):\n",
     "        \"\"\"\n",
@@ -312,7 +330,8 @@
     "        self.tail = None\n",
     "        self.head = None\n",
     "        self.size = 0\n",
-    "        \n",
+    "       \n",
+    "    \n",
     "    def append(self, value):\n",
     "        node = Node(value)\n",
     "        if self.tail:\n",
@@ -322,6 +341,7 @@
     "            self.tail = node\n",
     "            self.head = node \n",
     "        self.size += 1 \n",
+    "         \n",
     "            \n",
     "    def iterate(self):\n",
     "        current = self.head\n",
@@ -329,6 +349,7 @@
     "            yield current.value\n",
     "            current = current.next       \n",
     "\n",
+    "            \n",
     "    def delete(self, value):\n",
     "        \"\"\"\n",
     "        To delete a node between other nodes we must make the previous node point directly to the\n",
@@ -409,6 +430,7 @@
     "        self.head = None\n",
     "        self.size = 0\n",
     "        \n",
+    "        \n",
     "    def append(self, value):\n",
     "        node = Node(value)\n",
     "        if self.tail:\n",
@@ -418,6 +440,7 @@
     "            self.tail = node\n",
     "            self.head = node \n",
     "        self.size += 1 \n",
+    "         \n",
     "            \n",
     "    def iterate(self):\n",
     "        current = self.head\n",
@@ -425,6 +448,7 @@
     "            yield current.value\n",
     "            current = current.next       \n",
     "\n",
+    "            \n",
     "    def delete(self, value):\n",
     "        current = self.head\n",
     "        previous = self.head\n",
@@ -438,7 +462,8 @@
     "                return\n",
     "            previous = current\n",
     "            current = current.next\n",
-    "            \n",
+    "         \n",
+    "        \n",
     "    def search(self, value):\n",
     "        \"\"\"\n",
     "        Search within all the nodes if the value you\n",
@@ -448,6 +473,7 @@
     "            if value == node:\n",
     "                return True\n",
     "        return False\n",
+    "    \n",
     "    \n",
     "    def clear(self):\n",
     "        \"\"\"Easily clear the linked list by setting both the head and tail to None.\n",
@@ -536,11 +562,13 @@
     "        self.value = value\n",
     "        self.next = None\n",
     "\n",
+    "        \n",
     "class SinglyLinkedList:  # Should run in O(1)\n",
     "    def __init__(self):\n",
     "        self.tail = None\n",
     "        self.head = None\n",
     "        self.size = 0  # We initialize a counter at 0.\n",
+    "        \n",
     "        \n",
     "    def append(self, value):\n",
     "        \"\"\"\n",
@@ -555,6 +583,7 @@
     "            self.tail = node\n",
     "            self.head = node \n",
     "        self.size += 1 \n",
+    "           \n",
     "            \n",
     "    def iterate(self):\n",
     "        \"\"\"\n",
@@ -568,6 +597,7 @@
     "            yield current.value\n",
     "            current = current.next         \n",
     "\n",
+    "            \n",
     "    def delete(self, value):\n",
     "        \"\"\"\n",
     "        To delete a node between other nodes we must make the previous node point directly to the\n",
@@ -587,7 +617,8 @@
     "                return\n",
     "            previous = current\n",
     "            current = current.next\n",
-    "            \n",
+    "           \n",
+    "        \n",
     "    def search(self, value, position=-1):\n",
     "        \"\"\"\n",
     "        Search within all the nodes if the value you\n",
@@ -598,6 +629,7 @@
     "            if value == node:\n",
     "                return position\n",
     "        return False\n",
+    "    \n",
     "    \n",
     "    def clear(self):\n",
     "        \"\"\"Easily clear the linked list by setting both the head and tail to None.\n",
