--- a/stacks_and_queues/queues.ipynb
+++ b/stacks_and_queues/queues.ipynb
@@ -24,6 +24,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment if you want to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,9 +57,11 @@
     "        self.size = 0\n",
     "        self.items = []\n",
     "        \n",
+    "        \n",
     "    def enqueue(self, value):\n",
     "        self.items.insert(0, value)  # Always putting it at the 0th element.\n",
     "        self.size += 1\n",
+    "        \n",
     "        \n",
     "    def dequeue(self):\n",
     "        return self.items.pop()\n",
@@ -193,8 +208,10 @@
     "        self.inbound_stack = []\n",
     "        self.outbound_stack = []\n",
     "        \n",
+    "        \n",
     "    def enqueue(self, value):\n",
     "        self.inbound_stack.append(value)\n",
+    "        \n",
     "        \n",
     "    def dequeue(self):\n",
     "        if not self.outbound_stack:  # Check if empty\n",
@@ -397,6 +414,7 @@
     "        self.tail = None\n",
     "        self.size = 0\n",
     "    \n",
+    "    \n",
     "    def enqueue(self, value):\n",
     "        new_node = Node(value)\n",
     "        if self.head:\n",
@@ -407,6 +425,7 @@
     "            self.head = new_node\n",
     "            self.tail = self.head  \n",
     "        self.size += 1 \n",
+    "        \n",
     "        \n",
     "    def dequeue(self):\n",
     "        current = self.head\n",
@@ -422,6 +441,7 @@
     "            self.head.previous = None\n",
     "            self.size -= 1\n",
     "            return x\n",
+    "           \n",
     "            \n",
     "    def iterate(self):\n",
     "        current = self.head\n",
@@ -573,6 +593,7 @@
     "from random import randint\n",
     "import time\n",
     "\n",
+    "\n",
     "class Track:\n",
     "    def __init__(self, title):\n",
     "        self.title = title\n",
@@ -589,8 +610,10 @@
     "    def __init__(self):\n",
     "        super(MediaPlayerQueue, self).__init__()\n",
     "        \n",
+    "        \n",
     "    def add_track(self, track):\n",
     "        self.enqueue(track)\n",
+    "        \n",
     "        \n",
     "    def play(self):\n",
     "        while self.size:\n",
