--- a/stacks_and_queues/stacks.ipynb
+++ b/stacks_and_queues/stacks.ipynb
@@ -19,13 +19,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment if you want to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simple Node class\n",
-    "\n",
     "class Node:\n",
+    "    \"\"\"\n",
+    "    Simple Node class\n",
+    "    \"\"\"\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.next = None\n",
@@ -38,12 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Class for stack implementation and push operation\n",
-    "\n",
     "class Stack:\n",
+    "    \"\"\"\n",
+    "    Class for stack implementation and push operation\n",
+    "    \"\"\"\n",
     "    def __init__(self):\n",
     "        self.top = None\n",
     "        self.size = 0\n",
+    "        \n",
     "        \n",
     "    def push(self, value):\n",
     "        \"\"\"\n",
@@ -130,12 +146,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Class for stack implementation and push operation\n",
-    "\n",
     "class Stack:\n",
     "    def __init__(self):\n",
     "        self.top = None\n",
     "        self.size = 0\n",
+    "        \n",
     "        \n",
     "    def push(self, value):\n",
     "        node = Node(value)\n",
@@ -145,6 +160,7 @@
     "        else:\n",
     "            self.top = node\n",
     "        self.size += 1\n",
+    "        \n",
     "        \n",
     "    def pop(self):\n",
     "        \"\"\"\n",
@@ -180,6 +196,7 @@
     "        self.top = None\n",
     "        self.size = 0\n",
     "        \n",
+    "        \n",
     "    def push(self, value):\n",
     "        node = Node(value)\n",
     "        if self.top:\n",
@@ -188,6 +205,7 @@
     "        else:\n",
     "            self.top = node\n",
     "        self.size += 1\n",
+    "        \n",
     "        \n",
     "    def pop(self):\n",
     "        \"\"\"\n",
@@ -204,6 +222,7 @@
     "        else:\n",
     "            return None\n",
     "\n",
+    "        \n",
     "    def peak(self):\n",
     "        \"\"\"\n",
     "        Return the value of self.top\n",
@@ -212,6 +231,7 @@
     "            return self.top.value\n",
     "        else:\n",
     "            return None\n",
+    "        \n",
     "        \n",
     "    def iterate(self):  # Should return in reverse order\n",
     "        current = self.top\n",
