--- a/trees/binary_trees.ipynb
+++ b/trees/binary_trees.ipynb
@@ -11,7 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment if you want to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -25,31 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['balanced.png',\n",
-       " '.DS_Store',\n",
-       " 'complete-full-trees1.png',\n",
-       " 'full_complete.png',\n",
-       " 'binary_tree.png']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +48,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,6 +61,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Terminology:</b>\n",
+    "\n",
     "<b>Root node:</b> At the top of every tree we have a root node. Ancenstor/parent to all the nodes in the tree.\n",
     "\n",
     "<b>Node:</b> Represented here by the letters, a node is a structure that holds a value\n",
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -109,7 +100,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,8 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -130,25 +123,344 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename='balanced.png')"
+    "Image(filename='fully_balanced.png')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Categories of trees:</b>\n",
+    "\n",
     "<b>Full:</b> A full binary tree is a binary tree in which each node has exactly zero or two children.\n",
     "    \n",
     "<b>Complete:</b> A complete binary tree is a binary tree, which is completely filled, with the possible exception of the bottom level, which is filled from left to right.\n",
     "\n",
-    "<b>Balanced:</b>"
+    "<b>Balanced:</b> When the differnece of height of subtrees are <= 1\n",
+    "\n",
+    "<b>Fully balanced:</b> Full, complete, all nodes have two children and are the same height."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.right_child = None\n",
+    "        self.left_child = None\n",
+    "        \n",
+    "n1 = Node('root')\n",
+    "n2 = Node('left child')\n",
+    "n3 = Node('right child')\n",
+    "n4 = Node('left grandchild')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n1.left_child = n2\n",
+    "n1.right_child = n3\n",
+    "n2.left_child = n4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current = n1\n",
+    "\n",
+    "while current:\n",
+    "    print(current.value)\n",
+    "    current = current.left_child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Binary search tree</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Insertion</b>\n",
+    "\n",
+    "https://goo.gl/x7gXD6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.right_child = None\n",
+    "        self.left_child = None\n",
+    "        \n",
+    "        \n",
+    "class Tree:\n",
+    "    def __init__(self):\n",
+    "        self.root_node = None\n",
+    "\n",
+    "        \n",
+    "    def insert(self, value):\n",
+    "        \"\"\"\n",
+    "        Our first insertion is always our root node.\n",
+    "        \n",
+    "        Now every other insertion heads to our else statement.\n",
+    "        We use parent as comparison\n",
+    "        \"\"\"\n",
+    "        node = Node(value)\n",
+    "        if self.root_node is None:\n",
+    "            self.root_node = node\n",
+    "        else:\n",
+    "            current = self.root_node\n",
+    "            parent = None\n",
+    "            while True:\n",
+    "                parent = current\n",
+    "                if node.value < current.value:\n",
+    "                    current = current.left_child\n",
+    "                    if current is None:\n",
+    "                        parent.left_child = node\n",
+    "                        return\n",
+    "                else:\n",
+    "                    current = current.right_child\n",
+    "                    if current is None:\n",
+    "                        parent.right_child = node\n",
+    "                        return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nl = Tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nl.insert(4)  # Root node\n",
+    "\n",
+    "nl.insert(3)  # Should be root node's left child\n",
+    "nl.insert(8)  # Should be root node's right child\n",
+    "nl.insert(2)  # Should be root node's left child's left grand child\n",
+    "nl.insert(5)  # Should be root node's right child's left grand child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nl.root_node.left_child.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nl.root_node.left_child.left_child.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nl.root_node.right_child.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Finding max and min</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.right_child = None\n",
+    "        self.left_child = None\n",
+    "        \n",
+    "        \n",
+    "class Tree:\n",
+    "    def __init__(self):\n",
+    "        self.root_node = None\n",
+    "        \n",
+    "        \n",
+    "    def insert(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.root_node is None:\n",
+    "            self.root_node = node\n",
+    "        else:\n",
+    "            current = self.root_node\n",
+    "            parent = None\n",
+    "            while True:\n",
+    "                parent = current\n",
+    "                if node.value < current.value:\n",
+    "                    current = current.left_child\n",
+    "                    if current is None:\n",
+    "                        parent.left_child = node\n",
+    "                        return\n",
+    "                else:\n",
+    "                    current = current.right_child\n",
+    "                    if current is None:\n",
+    "                        parent.right_child = node\n",
+    "                        return\n",
+    "\n",
+    "                    \n",
+    "    def find_min(self):\n",
+    "        \"\"\"\n",
+    "        To find the minimum of a BST take the left most path down the tree.\n",
+    "        \"\"\"\n",
+    "        current = self.root_node\n",
+    "        while current.left_child:\n",
+    "            current = current.left_child\n",
+    "        return current\n",
+    "    \n",
+    "    \n",
+    "    def find_max(self):\n",
+    "        \"\"\"\n",
+    "        To find the maximum of a BST take the right most path down the tree.\n",
+    "        \"\"\"\n",
+    "        current = self.root_node\n",
+    "        while current.right_child:\n",
+    "            current = current.right_child\n",
+    "        return current"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nl = Tree()\n",
+    "\n",
+    "nl.insert(1)  # Root node\n",
+    "\n",
+    "nl.insert(3)  # Should be root node's left child\n",
+    "nl.insert(8)  # Should be root node's right child\n",
+    "nl.insert(2)  # Should be root node's left child's left grand child\n",
+    "nl.insert(5)  # Should be root node's right child's left grand child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nl.find_min().value  # In this case there is no left child."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nl.find_max().value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
