--- a/trees/binary_trees.ipynb
+++ b/trees/binary_trees.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "\n",
     "# from IPython.display import IFrame\n",
     "\n",
-    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=850)"
    ]
   },
   {
@@ -453,6 +453,252 @@
    ],
    "source": [
     "nl.find_max().value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Get node</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.right_child = None\n",
+    "        self.left_child = None\n",
+    "        \n",
+    "        \n",
+    "class Tree:\n",
+    "    def __init__(self):\n",
+    "        self.root_node = None\n",
+    "        \n",
+    "        \n",
+    "    def insert(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.root_node is None:\n",
+    "            self.root_node = node\n",
+    "        else:\n",
+    "            current = self.root_node\n",
+    "            parent = None\n",
+    "            while True:\n",
+    "                parent = current\n",
+    "                if node.value < current.value:\n",
+    "                    current = current.left_child\n",
+    "                    if current is None:\n",
+    "                        parent.left_child = node\n",
+    "                        return\n",
+    "                else:\n",
+    "                    current = current.right_child\n",
+    "                    if current is None:\n",
+    "                        parent.right_child = node\n",
+    "                        return\n",
+    "\n",
+    "                    \n",
+    "    def find_min(self):\n",
+    "        current = self.root_node\n",
+    "        while current.left_child:\n",
+    "            current = current.left_child\n",
+    "        return current\n",
+    "    \n",
+    "    \n",
+    "    def find_max(self):\n",
+    "        current = self.root_node\n",
+    "        while current.right_child:\n",
+    "            current = current.right_child\n",
+    "        return current\n",
+    "    \n",
+    "    \n",
+    "    def get_node_with_parent(self, value, parent=None):\n",
+    "        current = self.root_node\n",
+    "        try:\n",
+    "            if current is None:\n",
+    "                return (parent, None)\n",
+    "            while True:\n",
+    "                if current.value == value:\n",
+    "                    if parent == None:\n",
+    "                        return (parent, current.value)\n",
+    "                    return (parent.value, current.value)\n",
+    "                elif current.value > value:\n",
+    "                    parent = current\n",
+    "                    current = current.left_child\n",
+    "                else:\n",
+    "                    parent = current\n",
+    "                    current = current.right_child\n",
+    "            return (parent.value, current.value)\n",
+    "        except:\n",
+    "            print('Non-existent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nl = Tree()\n",
+    "\n",
+    "nl.insert(1)  # Root\n",
+    "nl.insert(3)\n",
+    "nl.insert(8)\n",
+    "nl.insert(2)\n",
+    "nl.insert(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Deletion</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are three occurances we will need to take care of when we delete a node; these are when a node has:\n",
+    "- No children\n",
+    "- One child\n",
+    "- Two children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.right_child = None\n",
+    "        self.left_child = None\n",
+    "        \n",
+    "        \n",
+    "class Tree:\n",
+    "    def __init__(self):\n",
+    "        self.root_node = None\n",
+    "        \n",
+    "        \n",
+    "    def insert(self, value):\n",
+    "        node = Node(value)\n",
+    "        if self.root_node is None:\n",
+    "            self.root_node = node\n",
+    "        else:\n",
+    "            current = self.root_node\n",
+    "            parent = None\n",
+    "            while True:\n",
+    "                parent = current\n",
+    "                if node.value < current.value:\n",
+    "                    current = current.left_child\n",
+    "                    if current is None:\n",
+    "                        parent.left_child = node\n",
+    "                        return\n",
+    "                else:\n",
+    "                    current = current.right_child\n",
+    "                    if current is None:\n",
+    "                        parent.right_child = node\n",
+    "                        return\n",
+    "\n",
+    "                    \n",
+    "    def find_min(self):\n",
+    "        current = self.root_node\n",
+    "        while current.left_child:\n",
+    "            current = current.left_child\n",
+    "        return current\n",
+    "    \n",
+    "    \n",
+    "    def find_max(self):\n",
+    "        current = self.root_node\n",
+    "        while current.right_child:\n",
+    "            current = current.right_child\n",
+    "        return current\n",
+    "    \n",
+    "    \n",
+    "    def get_node_with_parent(self, value):\n",
+    "        \"\"\"\n",
+    "        Works as a helper function for deletion\n",
+    "        \"\"\"\n",
+    "        current = self.root_node\n",
+    "        parent=None\n",
+    "        try:\n",
+    "            if current is None:\n",
+    "                return (parent, None)\n",
+    "            while True:\n",
+    "                if current.value == value:\n",
+    "                    if parent == None:\n",
+    "                        return (parent, current.value)\n",
+    "                    return (parent.value, current.value)\n",
+    "                elif current.value > value:\n",
+    "                    parent = current\n",
+    "                    current = current.left_child\n",
+    "                else:\n",
+    "                    parent = current\n",
+    "                    current = current.right_child\n",
+    "            return (parent.value, current.value)\n",
+    "        except:\n",
+    "            print('Non-existent')\n",
+    "            \n",
+    "    \n",
+    "    def remove(self, value):\n",
+    "        parent, node = self.get_node_with_parent(value)\n",
+    "        \n",
+    "        if parent is None and node is None:\n",
+    "            return False\n",
+    "        \n",
+    "        children_count = 0\n",
+    "        \n",
+    "        if node.left_child and node.right_child:\n",
+    "            children_count = 2\n",
+    "        elif node.left_child is None and node.right_child is None:\n",
+    "            children_count = 0\n",
+    "        else:\n",
+    "            children_count = 1\n",
+    "            \n",
+    "        if children_count == 0:\n",
+    "            if parent:\n",
+    "                if parent.right_child is node:\n",
+    "                    parent.right_child = None\n",
+    "                else:\n",
+    "                    parent.left_child = None\n",
+    "            else:\n",
+    "                self.root_node = None\n",
+    "        elif children_count == 1:\n",
+    "            next_node = None\n",
+    "            if node.left_child:\n",
+    "                next_node = node.left_child\n",
+    "            else:\n",
+    "                next_node = node.right_child\n",
+    "                if parent:\n",
+    "                    if parent.left_child is node:\n",
+    "                        parent.left_child = next_node\n",
+    "                    else:\n",
+    "                        parent.right_child = next_node\n",
+    "                else:\n",
+    "                    self.root_node = next_node\n",
+    "        else:\n",
+    "            parent_of_leftmost_node = node\n",
+    "            leftmost_node = node.right_child\n",
+    "            while leftmost_node.left_child:\n",
+    "                parent_of_leftmost_node = leftmost_node\n",
+    "                leftmost_node = leftmost_node.left_child\n",
+    "            node.value = leftmost_node.value\n",
+    "        "
    ]
   },
   {
