--- a/trees/binary_trees_recursive.ipynb
+++ b/trees/binary_trees_recursive.ipynb
@@ -37,7 +37,18 @@
     "                return True\n",
     "            \n",
     "    def find(self, value):\n",
-    "        if(s)\n",
+    "        if(self.value == data):\n",
+    "            return True\n",
+    "        elif self.value > value:\n",
+    "            if self.left_child:\n",
+    "                return self.left_child.find(data)\n",
+    "            else:\n",
+    "                return False\n",
+    "        else\n",
+    "            if self.right_child:\n",
+    "                return self.right_child.find(value)\n",
+    "            else:\n",
+    "                return False\n",
     "        \n",
     "        \n",
     "class Tree:\n",
